--- a/WebPagePractice170409/WebPagePractice170409/index.html
+++ b/WebPagePractice170409/WebPagePractice170409/index.html
@@ -22,6 +22,7 @@
     <!-- スタイルシート -->
     <link rel="stylesheet" href="./css/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="./css/saisei.shell.css" type="text/css" />
+    <link rel="stylesheet" href="./css/saisei.home.css" type="text/css" />
     <link rel="stylesheet" href="./css/saisei.gallery.css" type="text/css" />
     <link rel="stylesheet" href="./css/saisei.about.css" type="text/css" />
 
@@ -30,9 +31,15 @@
     <script src="./scripts/typings/jqueryui/jquery-ui.js"></script>
 
     <script src="./scripts/saisei.shell.js"></script>
+    <script src="./scripts/saisei.home.js"></script>
+    <script src="./scripts/saisei.gallery.js"></script>
+    <script src="./scripts/saisei.about.js"></script>
+    <script src="./scripts/saisei.data.js"></script>
+    <script src="./scripts/saisei.model.js"></script>
+    <script src="./scripts/saisei.utils.js"></script>
     <script>
         $(document).ready(function () {
-            saisei.shell.initModule("#saisei");
+            saisei.shell.initModule($('#saisei'));
         });
     </script>
 </head>
