--- a/WebPagePractice170409/WebPagePractice170409/layout.html
+++ b/WebPagePractice170409/WebPagePractice170409/layout.html
@@ -4,91 +4,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
 	<meta charset="utf-8" />
-    <style>
-        .saisei-head{
-            top:0;
-            left:4em;
-            right:4em;
-            height:12em;
-            border-radius: 10px;
-        }
-        .saisei-head-logo{
-            top:0.2em;
-            left:0;
-            right:0;
-            height:2.4em;
-            background: #3a8104 url("images/ui-bg_highlight-soft_33_3a8104_1x100.png") 92% 8% repeat-x;
-            text-align:left;
-            text-indent:1em;
-            font-size:400%;
-            font-style:italic;
-            color:#fffac0;
-            border-radius: 10px;
-        }
-        .saisei-main{
-            top:18em;
-            left:4em;
-            right:4em;
-            height:47.5em;
-            background:#eee;
-            border-radius: 10px;
-            border: 5px solid #767164;
-        }
-        .saisei-main-home{
-            top:-2em;
-            left:1.5em;
-            height:2em;
-            width:4em;
-            text-align:center;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size:300%;
-            font-style:italic;
-            color:#4ca20b;
-            border-radius: 10px;
-        }
-        .saisei-main-gallery{
-            top:-2em;
-            left:7.5em;
-            height:2em;
-            width:4em;
-            text-align:center;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size:300%;
-            font-style:italic;
-            color:#4ca20b;
-            border-radius: 10px;
-        }
-        .saisei-main-about{
-            top:-2em;
-            left:13.5em;
-            height:2em;
-            width:4em;
-            text-align:center;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size:300%;
-            font-style:italic;
-            color:#4ca20b;
-            border-radius: 10px;
-        }
-        .saisei-main-contents{
-            top:0;
-            left:0;
-            right:0;
-            height:100%;
-            background:#eee;
-            border-radius: 10px;
-        }
-        .saisei-foot{
-            top:66em;
-            left:4em;
-            right:4em;
-            height:4em;
-            text-align:center;
-            border-radius: 10px;
-        }    </style>
+
     <!-- スタイルシート -->
     <link rel="stylesheet" href="./css/jquery-ui.css" type="text/css" />
     <link rel="stylesheet" href="./css/saisei.shell.css" type="text/css" />
+    <link rel="stylesheet" href="./css/saisei.home.css" type="text/css" />
+    <link rel="stylesheet" href="./css/saisei.gallery.css" type="text/css" />
+    <link rel="stylesheet" href="./css/saisei.about.css" type="text/css" />
 
     <!-- ライブラリ -->
     <script src="./scripts/typings/jquery/jquery-3.1.1.js"></script>
@@ -103,10 +25,22 @@
             </div>
         </div>
         <div class="saisei-main">
-            <div class="saisei-main-home"><h2>Home</h2></div>
-            <div class="saisei-main-gallery"><h2>Gallery</h2></div>
-            <div class="saisei-main-about"><h2>About</h2></div>
-            <div class="saisei-main-contents"></div>
+            <div class="saisei-main-home">Home</div>
+            <div class="saisei-main-gallery">Gallery</div>
+            <div class="saisei-main-about">About</div>
+            <div class="saisei-main-contents">
+                <div class="saisei-home-img"></div>
+                <div class="saisei-home-img-text">作品タイトル</div>
+                <div class="saisei-home-dl-title">更新情報</div>
+                <dl class="saisei-home-dl">
+                    <dt class="saisei-home-dt">20XX/00/00</dt>
+                    <dd class="saisei-home-dd">更新情報説明001</dd>
+                    <dt class="saisei-home-dt">20XX/00/01</dt>
+                    <dd class="saisei-home-dd">更新情報説明002 説明文 説明文 説明文 説明文 説明文 説明文 説明文</dd>
+                    <dt class="saisei-home-dt">20XX/00/02</dt>
+                    <dd class="saisei-home-dd">更新情報説明003 説明文 説明文 説明文 説明文 説明文 説明文 説明文</dd>
+                </dl>
+            </div>
         </div>
         <div class="saisei-foot"><h6>Copyright© SAISEI SITE All Rights Reserved.</h6></div>
     </div>
