Inprogress Data class impliments
add dummy img data

--- a/WebPagePractice170409/WebPagePractice170409/layout.html
+++ b/WebPagePractice170409/WebPagePractice170409/layout.html
@@ -20,9 +20,7 @@
 <body>
     <div id="saisei">
         <div class="saisei-head">
-            <div class="saisei-head-logo">
-                <h1>ようこそ灑清教室へ</h1>
-            </div>
+            <div class="saisei-head-logo">ようこそ灑清教室へ</div>
         </div>
         <div class="saisei-main">
             <div class="saisei-main-home">Home</div>
