progress on home tag
in progress dialog action

--- a/WebPagePractice170409/WebPagePractice170409/index.html
+++ b/WebPagePractice170409/WebPagePractice170409/index.html
@@ -34,6 +34,7 @@
     <script src="./scripts/saisei.home.js"></script>
     <script src="./scripts/saisei.gallery.js"></script>
     <script src="./scripts/saisei.about.js"></script>
+    <script src="./scripts/saisei.const.js"></script>
     <script src="./scripts/saisei.data.js"></script>
     <script src="./scripts/saisei.model.js"></script>
     <script src="./scripts/saisei.utils.js"></script>
