--- a/WebPagePractice170409/WebPagePractice170409/layout.html
+++ b/WebPagePractice170409/WebPagePractice170409/layout.html
@@ -27,7 +27,7 @@
             <div class="saisei-main-gallery">Gallery</div>
             <div class="saisei-main-about">About</div>
             <div class="saisei-main-contents">
-                <button class="saisei-home-img"></button>
+                <button class="saisei-home-img" style="background-image:url('images/shell-img001.jpg')"></button>
                 <!-- ui-dialog -->
                 <div id="dialog" title="Dialog Title">
                     <div class="saisei-home-dialog"><img src="images/shell-img001.jpg" alt="test" class="saisei-home-dialog-img" /></div>
