--- a/WebPagePractice170409/WebPagePractice170409/layout.html
+++ b/WebPagePractice170409/WebPagePractice170409/layout.html
@@ -27,26 +27,135 @@
             <div class="saisei-main-gallery">Gallery</div>
             <div class="saisei-main-about">About</div>
             <div class="saisei-main-contents">
-                <button class="saisei-home-img" style="background-image:url('images/shell-img001.jpg')"></button>
+                <div class="saisei-gallery-search">
+                    <div id="accordion">
+                        <h3>イベント名</h3>
+                        <div>
+                            <select id="selectmenu" class="saisei-gallery-select">
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                            </select>
+                        </div>
+                        <h3>作者名</h3>
+                        <div>
+                            <select id="selectmenu" class="saisei-gallery-select">
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                            </select>
+                        </div>
+                        <h3>施設・場所名</h3>
+                        <div>
+                            <select id="selectmenu" class="saisei-gallery-select">
+                                <option>Slower</option>
+                                <option>Slow</option>
+                                <option>Medium</option>
+                                <option>Fast</option>
+                                <option>Faster</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <!-- 横並びは前後のタグの改行を削除する 余白対策 -->
+                <div class="saisei-gallery-upperblock">
+                    <div class="saisei-gallery-block">
+                        <div class="saisei-gallery-upperimg-text">作品タイトル</div>
+                        <button class="saisei-gallery-image" style="background-image:url('images/shell-img001.jpg')"></button>
+                    </div><div class="saisei-gallery-block">
+                        <div class="saisei-gallery-upperimg-text">作品タイトル</div>
+                        <button class="saisei-gallery-image" style="background-image:url('images/shell-img001.jpg')"></button>
+                    </div><div class="saisei-gallery-block">
+                        <div class="saisei-gallery-upperimg-text">作品タイトル</div>
+                        <button class="saisei-gallery-image" style="background-image:url('images/shell-img001.jpg')"></button>
+                    </div>
+                </div>
+                <div class="saisei-gallery-lowerblock">
+                    <div class="saisei-gallery-block">
+                        <button class="saisei-gallery-image" style="background-image:url('images/shell-img001.jpg')"></button>
+                        <div class="saisei-gallery-lowerimg-text">作品タイトル</div>
+                    </div><div class="saisei-gallery-block">
+                        <button class="saisei-gallery-image" style="background-image:url('images/shell-img001.jpg')"></button>
+                        <div class="saisei-gallery-lowerimg-text">作品タイトル</div>
+                    </div><div class="saisei-gallery-block">
+                        <!--<div class="saisei-gallery-buttondummy"></div>-->
+                        <div class="saisei-gallery-buttonset">
+                            <div class="saisei-gallery-buttondummy"></div>
+                            <button id="button-icon01">最初のページ</button>
+                            <button id="button-icon02">前のページ</button>
+                            <button id="button-icon03">次のページ</button>
+                            <button id="button-icon04">最後のページ</button>
+                        
+                        <!--<div class="saisei-gallery-buttondummy"></div>-->
+                        </div>
+                        <div class="saisei-gallery-blockdummy">続きがあります</div>
+                    </div>
                 <!-- ui-dialog -->
                 <div id="dialog" title="Dialog Title">
-                    <div class="saisei-home-dialog"><img src="images/shell-img001.jpg" alt="test" class="saisei-home-dialog-img" /></div>
+                    <div class="saisei-gallery-dialog"><img src="images/shell-img001.jpg" alt="test" class="saisei-gallery-dialog-img" /></div>
                 </div>
-                <div class="saisei-home-img-text">作品タイトル</div>
-                <div class="saisei-home-dl-title">更新情報</div>
-                <dl class="saisei-home-dl">
-                    <dt class="saisei-home-dt">20XX/00/00</dt>
-                    <dd class="saisei-home-dd">更新情報説明001</dd>
-                    <dt class="saisei-home-dt">20XX/00/01</dt>
-                    <dd class="saisei-home-dd">更新情報説明002 説明文 説明文 説明文 説明文 説明文 説明文 説明文</dd>
-                    <dt class="saisei-home-dt">20XX/00/02</dt>
-                    <dd class="saisei-home-dd">更新情報説明003 説明文 説明文 説明文 説明文 説明文 説明文 説明文</dd>
-                </dl>
             </div>
         </div>
         <div class="saisei-foot"><h6>Copyright© SAISEI SITE All Rights Reserved.</h6></div>
     </div>
 <script>
+    $("#accordion").accordion();
+    //$("#selectmenu").selectmenu();
+    $(".saisei-gallery-select").selectmenu();
     $("#dialog").dialog({
         autoOpen: false,
         width: 500,
@@ -60,9 +169,25 @@
         ]
     });
     // Link to open the dialog 
-    $(".saisei-home-img").click(function (event) {
+    $(".saisei-gallery-image").click(function (event) {
         $("#dialog").dialog("open");
         event.preventDefault();
+    });
+    $("#button-icon01").button({
+        icon: "ui-icon ui-icon-seek-first",
+        showLabel: false
+    });
+    $("#button-icon02").button({
+        icon: "ui-icon ui-icon-circle-triangle-w",
+        showLabel: false
+    });
+    $("#button-icon03").button({
+        icon: "ui-icon ui-icon-circle-triangle-e",
+        showLabel: false
+    });
+    $("#button-icon04").button({
+        icon: "ui-icon ui-icon-seek-end",
+        showLabel: false
     });
 </script>
 </body>
