In progress implements
select menu action become blue print level

--- a/WebPagePractice170409/WebPagePractice170409/layout.html
+++ b/WebPagePractice170409/WebPagePractice170409/layout.html
@@ -139,14 +139,15 @@
                             <button id="button-icon02">前のページ</button>
                             <button id="button-icon03">次のページ</button>
                             <button id="button-icon04">最後のページ</button>
-                        
-                        <!--<div class="saisei-gallery-buttondummy"></div>-->
+
+                            <!--<div class="saisei-gallery-buttondummy"></div>-->
                         </div>
                         <div class="saisei-gallery-blockdummy">続きがあります</div>
                     </div>
-                <!-- ui-dialog -->
-                <div id="dialog" title="Dialog Title">
-                    <div class="saisei-gallery-dialog"><img src="images/shell-img001.jpg" alt="test" class="saisei-gallery-dialog-img" /></div>
+                    <!-- ui-dialog -->
+                    <div id="dialog" title="Dialog Title">
+                        <div class="saisei-gallery-dialog"><img src="images/shell-img001.jpg" alt="test" class="saisei-gallery-dialog-img" /></div>
+                    </div>
                 </div>
             </div>
         </div>
